--- a/Computing Project.Rmd
+++ b/Computing Project.Rmd
@@ -9,3 +9,5 @@ Damon Landis: The goal of this project is to determine the more efficient data a
 Aaron Bowlin: The goal of our group’s project is not only to write a couple program’s that can deal with the data created by a capstone project, but to determine which programming language (R or Mathematica) would perform better for this specific given project. We must wait for the polymerase chain reaction experiment to finish in order to have the data in order to actually write the program. However, I have researched articles and watched tutorial videos on R programming and plan on meeting with Dr. Malmberg soon. regarding the program.
 
 Jackson Landsteiner: The group was split into two sub groups. I was apart of the r markdown group, so while the capstone project was finishing, I have been familiarizing myself with the different functions to properly utilize the coding. Once the information is obtained it’ll be placed into the code.
+
+Dakota Clark: The overall goal of our experiment is to perform data analysis of a capstone project using R and Mathematica, and then compare the language used in each. To date, I have reviewed directions and resources describing the use of Mathematica to analyze data (which is the program my group will be using), and I have downloaded Mathematica onto my computer. No analysis has been able to be performed yet as we are waiting for the capstone project to conclude.
